tests/samples/invalid/reserved_keyword_as_identifier.pn

fn i128()
{
	var ok = true;
}

fn foo()
{
	var usize = true;
}

fn bar()
{
	start:
	extern:
	end:
}

struct void
{
	x: i32,
}

struct Baz
{
	bool: i32,
}

fn do_something()
{
	var baz = struct { x: 0 };
}
